--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -8,11 +8,14 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
+    env:
+      STACK: ${{ env.STACK }}
+
     steps:
       - name: Check out code
         uses: actions/checkout@v2
-        
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -27,12 +30,12 @@ jobs:
 
       - name: Build and Push Backend Docker image to GCP
         run: |
-          IMAGE_NAME=gcr.io/deploy-box/mern-backend
+          IMAGE_NAME=us-central1-docker.pkg.dev/deploy-box/available-stacks/${{ env.STACK }}-backend
           docker build -t $IMAGE_NAME source_code/backend
           docker push $IMAGE_NAME
 
       - name: Build and Push Frontend Docker image to GCP
         run: |
-          IMAGE_NAME=gcr.io/deploy-box/mern-frontend
+          IMAGE_NAME=us-central1-docker.pkg.dev/deploy-box/available-stacks/${{ env.STACK }}-frontend
           docker build -t $IMAGE_NAME source_code/frontend
           docker push $IMAGE_NAME
