--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      STACK: ${{ env.STACK }}
+      STACK: ${{ vars.STACK }}
 
     steps:
       - name: Check out code
