--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -27,15 +27,15 @@ jobs:
       - name: Configure Docker to use gcloud
         run: |
           gcloud auth configure-docker
-
+          
       - name: Build and Push Backend Docker image to GCP
         run: |
-          IMAGE_NAME=gcr.io/deploy-box-available-stacks/${{ env.STACK }}-backend
+          IMAGE_NAME=gcr.io/deploy-box/${{ env.STACK }}-backend
           docker build -t $IMAGE_NAME source_code/backend
           docker push $IMAGE_NAME
 
       - name: Build and Push Frontend Docker image to GCP
         run: |
-          IMAGE_NAME=gcr.io/deploy-box-available-stacks/${{ env.STACK }}-frontend
+          IMAGE_NAME=gcr.io/deploy-box/${{ env.STACK }}-frontend
           docker build -t $IMAGE_NAME source_code/frontend
           docker push $IMAGE_NAME
