--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker image to GCP
 on:
   push:
     branches:
-      - main  # or any branch you want to trigger this action
+      - main
 
 jobs:
   build:
@@ -14,13 +14,13 @@ jobs:
 
     steps:
       - name: Check out code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Set up Google Cloud Authentication
-        uses: google-github-actions/auth@v0
+        uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
