--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -4,13 +4,16 @@ on:
   push:
     branches:
       - main
+      - dev
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: ${{ github.ref == 'refs/heads/main' && 'prod' || 'dev' }}
 
     env:
       STACK: ${{ vars.STACK }}
+      PROJECT_ID: ${{ vars.PROJECT_ID }}
 
     steps:
       - name: Check out code
@@ -30,12 +33,12 @@ jobs:
           
       - name: Build and Push Backend Docker image to GCP
         run: |
-          IMAGE_NAME=gcr.io/deploy-box/${{ env.STACK }}-backend
+          IMAGE_NAME=gcr.io/${{ env.PROJECT_ID }}/${{ env.STACK }}-backend
           docker build -t $IMAGE_NAME source_code/backend
           docker push $IMAGE_NAME
 
       - name: Build and Push Frontend Docker image to GCP
         run: |
-          IMAGE_NAME=gcr.io/deploy-box/${{ env.STACK }}-frontend
+          IMAGE_NAME=gcr.io/${{ env.PROJECT_ID }}/${{ env.STACK }}-frontend
           docker build -t $IMAGE_NAME source_code/frontend
           docker push $IMAGE_NAME
