--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker image to GCP
+name: Build and Push Docker image to Azure
 
 on:
   push:
@@ -13,7 +13,10 @@ jobs:
 
     env:
       STACK: ${{ vars.STACK }}
-      PROJECT_ID: ${{ vars.PROJECT_ID }}
+      ACR_NAME: ${{ vars.ACR_NAME }}
+      AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+      AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+      AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
     steps:
       - name: Check out code
@@ -22,23 +25,25 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Set up Google Cloud Authentication
-        uses: google-github-actions/auth@v2
+      - name: Log in to Azure
+        uses: azure/login@v1
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          client-id: ${{ env.AZURE_CLIENT_ID }}
+          tenant-id: ${{ env.AZURE_TENANT_ID }}
+          subscription-id: ${{ env.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Configure Docker to use gcloud
+      - name: Log in to Azure Container Registry
         run: |
-          gcloud auth configure-docker
-          
-      - name: Build and Push Backend Docker image to GCP
+          az acr login --name ${{ env.ACR_NAME }}
+
+      - name: Build and Push Backend Docker image to Azure
         run: |
-          IMAGE_NAME=gcr.io/${{ env.PROJECT_ID }}/${{ env.STACK }}-backend
+          IMAGE_NAME=${{ env.ACR_NAME }}.azurecr.io/${{ env.STACK }}-backend
           docker build -t $IMAGE_NAME source_code/backend
           docker push $IMAGE_NAME
 
-      - name: Build and Push Frontend Docker image to GCP
+      - name: Build and Push Frontend Docker image to Azure
         run: |
-          IMAGE_NAME=gcr.io/${{ env.PROJECT_ID }}/${{ env.STACK }}-frontend
+          IMAGE_NAME=${{ env.ACR_NAME }}.azurecr.io/${{ env.STACK }}-frontend
           docker build -t $IMAGE_NAME source_code/frontend
           docker push $IMAGE_NAME
