Refactor environment variable handling in CI/CD workflow to improve clarity and consistency

--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -19,10 +19,6 @@ jobs:
     env:
       STACK: ${{ vars.STACK }}
       ACR_NAME: ${{ vars.ACR_NAME }}
-      AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-      AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-      AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-      AZURE_BLOB_SAS: ${{ secrets.AZURE_BLOB_SAS }}
 
     steps:
       - name: Check out code
@@ -36,7 +32,7 @@ jobs:
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
 
       # - name: Log in to Azure Container Registry
       #   run: |
