--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -36,13 +36,13 @@ jobs:
 
       - name: Build and Push Backend Docker image to Azure
         run: |
-          IMAGE_NAME=${{ vars.ACR_NAME }}.azurecr.io/${{ vars.STACK }}-backend
+          IMAGE_NAME=$(echo "${{ vars.ACR_NAME }}.azurecr.io/${{ vars.STACK }}-backend" | tr '[:upper:]' '[:lower:]')
           docker build -t $IMAGE_NAME source_code/backend
           docker push $IMAGE_NAME
 
       - name: Build and Push Frontend Docker image to Azure
         run: |
-          IMAGE_NAME=${{ vars.ACR_NAME }}.azurecr.io/${{ vars.STACK }}-frontend
+          IMAGE_NAME=$(echo "${{ vars.ACR_NAME }}.azurecr.io/${{ vars.STACK }}-frontend" | tr '[:upper:]' '[:lower:]')
           docker build -t $IMAGE_NAME source_code/frontend
           docker push $IMAGE_NAME
 
