--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -57,7 +57,7 @@ jobs:
           az storage blob upload \
             --account-name ${{ vars.AZURE_STORAGE_ACCOUNT }} \
             --container-name ${{ vars.AZURE_STORAGE_CONTAINER }} \
-            --name ${{ env.STACK }}.zip \
+            --name $(echo "${{ vars.STACK }}.zip" | tr '[:upper:]' '[:lower:]') \
             --file source_code.zip \
             --sas-token "${{ secrets.AZURE_BLOB_SAS }}" \
             --overwrite
